tests/rosetta/transpiler/Zig/amicable-pairs.error
zig build: exit status 1
/tmp/amicable-pairs.zig:34:9: error: variable of type 'comptime_int' must be const or comptime
/tmp/amicable-pairs.zig:34:9: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
